# MyStudentManagementAPI

./: README.md  index.html  myapi.py  pyproject.toml  shop.py
database/: create_tables.sql  ecommerce.sql
myenv/: pyvenv.cfg
